EVG-6516 fix cut off test names (#3299)

--- a/public/static/less/task.less
+++ b/public/static/less/task.less
@@ -95,7 +95,6 @@
   left: -1em;
   float: left;
   max-width: 100%;
-  min-width: 200px;
   margin-right: -1em;
 }
 
